<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/empty_display"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/display" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toTopOf="@+id/key_7"
            app:layout_constraintEnd_toStartOf="@+id/key_clear"
            app:layout_constraintHorizontal_weight="3" android:textSize="@dimen/font_display" android:textStyle="bold"
            android:textAlignment="textEnd"
            android:gravity="end|center_vertical" android:layout_marginBottom="4dp" android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp" android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_7" app:layout_constraintStart_toStartOf="@+id/display"
            app:layout_constraintTop_toBottomOf="@+id/display"
            app:layout_constraintEnd_toStartOf="@+id/key_8"
            app:layout_constraintBottom_toTopOf="@+id/key_4" android:background="@drawable/bg_button_digit"
            android:layout_marginBottom="4dp" android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_8" app:layout_constraintEnd_toStartOf="@+id/key_9"
            app:layout_constraintStart_toEndOf="@+id/key_7"
            app:layout_constraintBottom_toBottomOf="@+id/key_7" app:layout_constraintTop_toTopOf="@+id/key_7"
            android:background="@drawable/bg_button_digit" android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp" android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_9" app:layout_constraintEnd_toStartOf="@+id/key_addition"
            app:layout_constraintStart_toEndOf="@+id/key_8"
            app:layout_constraintBottom_toBottomOf="@+id/key_8"
            app:layout_constraintTop_toTopOf="@+id/key_8" android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp" android:background="@drawable/bg_button_digit"
            android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_addition"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_addition" app:layout_constraintEnd_toEndOf="@+id/key_clear"
            app:layout_constraintStart_toEndOf="@+id/key_9"
            app:layout_constraintBottom_toBottomOf="@+id/key_9" app:layout_constraintTop_toTopOf="@+id/key_9"
            android:background="@drawable/bg_button_operation" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_substraction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_substraction"
            app:layout_constraintStart_toEndOf="@+id/key_6"
            app:layout_constraintBottom_toBottomOf="@+id/key_6"
            app:layout_constraintEnd_toEndOf="@+id/key_addition"
            app:layout_constraintTop_toTopOf="@+id/key_6" android:background="@drawable/bg_button_operation"
            android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_6"
            app:layout_constraintStart_toEndOf="@+id/key_5"
            app:layout_constraintBottom_toBottomOf="@+id/key_5"
            app:layout_constraintEnd_toStartOf="@+id/key_substraction"
            app:layout_constraintTop_toTopOf="@+id/key_5" android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp" android:background="@drawable/bg_button_digit"
            android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_5"
            app:layout_constraintStart_toEndOf="@+id/key_4"
            app:layout_constraintEnd_toStartOf="@+id/key_6"
            app:layout_constraintBottom_toBottomOf="@+id/key_4" app:layout_constraintTop_toTopOf="@+id/key_4"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_digit" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_4"
            app:layout_constraintTop_toBottomOf="@+id/key_7"
            app:layout_constraintEnd_toStartOf="@+id/key_5"
            app:layout_constraintStart_toStartOf="@+id/key_7"
            app:layout_constraintBottom_toTopOf="@+id/key_1" android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_digit" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_1"
            app:layout_constraintTop_toBottomOf="@+id/key_4"
            app:layout_constraintStart_toStartOf="@+id/key_4" app:layout_constraintEnd_toStartOf="@+id/key_2"
            app:layout_constraintBottom_toTopOf="@+id/key_0" android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_digit" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>

    <Button
            android:text="@string/key_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_2"
            app:layout_constraintStart_toEndOf="@+id/key_1"
            app:layout_constraintEnd_toStartOf="@+id/key_3"
            app:layout_constraintBottom_toBottomOf="@+id/key_1" app:layout_constraintTop_toTopOf="@+id/key_1"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_digit" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>

    <Button
            android:text="@string/key_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_3"
            app:layout_constraintStart_toEndOf="@+id/key_2"
            app:layout_constraintEnd_toStartOf="@+id/key_multiplication"
            app:layout_constraintBottom_toBottomOf="@+id/key_2" app:layout_constraintTop_toTopOf="@+id/key_2"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_digit" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>

    <Button
            android:text="@string/key_multilication"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_multiplication"
            app:layout_constraintStart_toEndOf="@+id/key_3"
            app:layout_constraintEnd_toEndOf="@+id/key_substraction"
            app:layout_constraintBottom_toBottomOf="@+id/key_3" app:layout_constraintTop_toTopOf="@+id/key_3"
            android:background="@drawable/bg_button_operation" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>
    <Button
            android:text="@string/key_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_0"
            app:layout_constraintTop_toBottomOf="@+id/key_1" app:layout_constraintStart_toStartOf="@+id/key_1"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/key_equals"
            app:layout_constraintHorizontal_weight="1" android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_digit" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>

    <Button
            android:text="@string/key_equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_equals"
            app:layout_constraintBottom_toBottomOf="@+id/key_0"
            app:layout_constraintTop_toTopOf="@+id/key_0"
            app:layout_constraintStart_toEndOf="@+id/key_0"
            app:layout_constraintHorizontal_weight="2" app:layout_constraintEnd_toStartOf="@+id/key_division"
            android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_operation" android:textSize="@dimen/font_key"
            android:textColor="@color/primary_light"/>

    <Button
            android:text="@string/key_division"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_division" app:layout_constraintEnd_toEndOf="@+id/key_multiplication"
            app:layout_constraintBottom_toBottomOf="@+id/key_equals"
            app:layout_constraintTop_toTopOf="@+id/key_equals"
            app:layout_constraintStart_toEndOf="@+id/key_equals"
            app:layout_constraintHorizontal_weight="1" android:background="@drawable/bg_button_operation"
            android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>

    <Button
            android:text="@string/key_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/key_clear"
            app:layout_constraintStart_toEndOf="@+id/display" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/display" app:layout_constraintBottom_toBottomOf="@+id/display"
            app:layout_constraintHorizontal_weight="1" android:background="@drawable/bg_button_operation"
            android:textSize="@dimen/font_key" android:textColor="@color/primary_light"/>

</android.support.constraint.ConstraintLayout>